[package]
name = "sap_cli"
version = "0.1.0"
edition = "2018"

[lib]
name = "sap_adt_bindings"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.5", features = ["cookies"] }
tokio = { version = "1.12.0", features = ["full"] }
cli-table = "0.4"
quick-xml = { version = "0.22.0", features = ["serde", "serialize"] }
minidom = "0.13.0"
serde = { version = "1.0", features = [ "derive" ] }
clap = { version = "3.0.0-beta.5", features = ["yaml"] }
csv = "1.1.6"
ini = "1.3.0"
chrono = "0.4.19"
serde_json = "1.0.59"
async-trait = "0.1.51"
rust-crypto = "0.2.36"
aes = "0.7.5"
rand = { version = "0.8.4", features = ["std"] }
rustc-serialize = "0.3"
aes-gcm = { version = "0.9.4", features = ["heapless"] }
heapless = "0.7.3"
text_io = "0.1.9"
crossterm = "0.22.1"

